--- a/translations/kangyur/placeholders/037-003_toh44-41-chapter_41_the_teaching_on_the_minor_marks_and_light_rays.xml
+++ b/translations/kangyur/placeholders/037-003_toh44-41-chapter_41_the_teaching_on_the_minor_marks_and_light_rays.xml
@@ -7,13 +7,14 @@
                 <title type="mainTitle" xml:lang="en">Chapter 41: The Teaching on the Minor Marks and Light Rays</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dpe byad 'od zer bstan pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《如來隨好光明功德品》</title>
-                <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
+                <sponsor xml:id="UT22084-037-003-1">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-037-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -27,11 +28,24 @@
                     <idno source-id="O1JC114941JC14709" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T16:25:54.424Z" user="admin">10/06/2022 16:25:54</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:59.163Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:19:53.413Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-03-17T02:19:59.163Z" type="text-version" status="0.0.1" xml:id="UT22084-037-003-2">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2021-05-11T05:19:53.413Z" type="text-version" status="0.0.2" xml:id="UT22084-037-003-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-037-003-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:47:22.743Z" type="translation-status" status="3" xml:id="UT22084-037-003-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:47:22.743Z" type="text-version" status="0.0.5" xml:id="UT22084-037-003-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
