--- a/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
+++ b/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
@@ -5,23 +5,22 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra for the Benefit of Aṅgulimāla</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aṅgulimālīyasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Aṅgulimālīyasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sor mo'i phreng ba la phan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāṅgulimālīyanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">《央掘魔羅經》</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṅgulimālīyanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sor mo'i phreng ba la phan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-062-013-1"/>
+                <title type="otherTitle" xml:lang="zh">《央掘魔羅經》</title>
+                <author role="translatorMain" xml:id="UT22084-062-013-1">Buddhavacana Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-062-013-2">Casey Kemp</author>
-                <consultant role="projectManager" xml:id="UT22084-062-013-3">Casey Kemp</consultant>
                 <sponsor xml:id="UT22084-062-013-4">Frank Lyn and Ivy Lai</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="4"/>
                 <idno xml:id="UT22084-062-013"/>
                 <date/>
             </publicationStmt>
@@ -57,6 +56,15 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-06T12:41:48.993Z" type="text-version" status="0.0.5" xml:id="UT22084-062-013-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:42:25Z" type="text-version" status="0.0.6" xml:id="UT22084-062-013-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#andreas" when="2023-11-09T14:39:39.039Z" type="translation-status" status="4" xml:id="UT22084-062-013-13">
+                    <desc>4</desc>
+                </change>
+                <change who="#andreas" when="2023-11-09T14:39:39.039Z" type="text-version" status="0.0.7" xml:id="UT22084-062-013-14">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
