--- a/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
+++ b/translations/kangyur/placeholders/062-013_toh213-the_sutra_for_the_benefit_of_angulimala.xml
@@ -15,12 +15,12 @@
                 <sponsor xml:id="UT22084-062-013-4">Frank Lyn and Ivy Lai</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2023</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-062-013"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +66,12 @@
                 </change>
                 <change who="#andreas" when="2023-11-09T14:39:39.039Z" type="text-version" status="0.0.7" xml:id="UT22084-062-013-14">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#andreas" when="2023-11-09T14:43:28.842Z" type="translation-status" status="3" xml:id="UT22084-062-013-15">
+                    <desc>3</desc>
+                </change>
+                <change who="#andreas" when="2023-11-09T14:43:28.842Z" type="text-version" status="0.0.6" xml:id="UT22084-062-013-16">
+                    <desc>User set version to 0.0.6</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
