--- a/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
+++ b/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
@@ -34,7 +34,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.1 <date>2023</date>
+                <edition>v 0.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -166,6 +166,9 @@
                 <change who="#john" when="2023-11-08T18:47:15.348Z" type="text-version" status="0.1.1" xml:id="UT22084-091-043-244">
                     <desc>Various edits prior to publication.</desc>
                 </change>
+                <change who="#john" when="2023-11-10T15:47:57.551Z" type="text-version" status="0.1.2" xml:id="UT22084-091-043-1219">
+                    <desc>Further edits prior to publication.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -209,11 +212,11 @@
                                                   Dhāraṇī of Refuge for the Preta Flaming
                                                   Mouth</title> (Toh 646) comes first, followed
                                                   by<title xml:lang="en"> The Bali Ritual to Relieve
-                                                  the Female Preta Burning Mouth</title> (Toh 647).
+                                                  the Female Preta Flaming Mouth</title> (Toh 647).
                                                   However in the Dhāraṇī section, in which both
                                                   texts are also found, the order is reversed, so
                                                   that the (marginally shorter) <title xml:lang="en">The Bali Ritual to Relieve the Female Preta
-                                                  Burning Mouth</title> (Toh 1079) comes first,
+                                                  Flaming Mouth</title> (Toh 1079) comes first,
                                                   followed by the <title xml:lang="en">The Dhāraṇī
                                                   of Refuge for the Preta Flaming Mouth</title>
                                                   (1080).</note> in which the Buddha teaches a
@@ -252,7 +255,7 @@
                                                   of the Degé Kangyur. See Toh 1080, <ref target="https://read.84000.co/translation/toh1080.html#end-note-UT22084-091-043-129">note 2</ref>, for details.</p>
                                                   <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                                                 </note> The other text is <title xml:lang="en">The
-                                                  Bali Ritual to Relieve the Female Preta Burning
+                                                  Bali Ritual to Relieve the Female Preta Flaming
                                                   Mouth </title>(<ref rend="pending" target="https://read.84000.co/translation/toh647.html">Toh 647</ref>/<ref rend="pending" target="https://read.84000.co/translation/toh1079.html">1079</ref>). These texts have had a significant
                                                 legacy for the ritual traditions of Buddhist Asia,
                                                 serving as foundations for the traditions of giving
@@ -286,7 +289,7 @@
                                                 the translators.</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-043-12"/>
                                         <p tid="13">The closely related text, <title xml:lang="en">The Bali Ritual to Relieve the Female Preta
-                                                  Burning Mouth </title>(Toh 647/ 1079) is listed in
+                                                  Flaming Mouth </title>(Toh 647/ 1079) is listed in
                                                 the Denkarma (<title xml:lang="Bo-Ltn">ldan dkar
                                                   ma</title>) imperial catalog compiled in the early
                                                 ninth century <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-091-043-13"> Denkarma,
@@ -344,13 +347,14 @@
                                                 however, appear to be reconstructions
                                                 back-translated from the Tibetan. In the
                                                 Chinese versions, the name of the preta is
-                                                translated as Yankou (<foreign xml:lang="zh">燄口</foreign> or <foreign xml:lang="zh">焰口</foreign>, “Flaming Mouth”) in Taishō 1313,
+                                                translated as Yankou (<foreign xml:lang="zh">燄口</foreign> or 
+                                                <foreign xml:lang="zh">焰口</foreign>, “Flaming Mouth”) in Taishō 1313,
                                                 and as Mianran (<foreign xml:lang="zh">面燃</foreign>,
                                                 “Burning Face”) in Taishō 1314, which it has been
                                                 suggested could correspond to the putative Sanskrit
                                                 *Jvālāmukha or *Ulkāmukha. It remains unclear
-                                                whether this is a proper name referring to the
-                                                specific preta who appears in this narrative, or a
+                                                whether in this text this is a proper name referring to the
+                                                specific preta who appears in the narrative, or a
                                                 more generic identifier for a class of pretas
                                                 (“those with flames coming from their mouths”). 
                                                 Fire and flames are indeed a relatively common—but by no means 
@@ -359,18 +363,38 @@
                                                         Rotman (2021), p. 46.</note> the primary features being hunger, 
                                                 thirst, and pain, suffered both because of terrible physical deformities
                                                 and because of being deprived of all but the most minimal or disgusting 
-                                                means of sustenance.</p>
+                                                means of sustenance. The Sanskrit Jvālāmukha and Tibetan 
+                                                <foreign xml:lang="Bo-Ltn">kha ’bar ma</foreign>, as well as being the name of various minor
+                                                deities in a range of tantras, is more specifically in the <title xml:lang="Sa-Ltn">Guhyagarbhatantra</title> 
+                                                and other tantras of the Nyingma tradition the name of the
+                                                nirmāṇakāya sage (Muni) who manifests in the realm of the pretas, one of six such
+                                                Munis corresponding to the six realms and numbered among the one hundred
+                                                peaceful and wrathful deities of the maṇḍala.<note place="end" xml:id="UT22084-091-043-1218">As, 
+                                                        for example, in the <title xml:lang="Bo-Ltn">ting nge ’dzin mchog gi rgyud</title> 
+                                                        (<ref target="http://www.rkts.org/cat.php?id=149&amp;typ=3">rKTs-G149</ref> f. 163.a) and 
+                                                        <title xml:lang="Bo-Ltn">chos nyid zhi ba’i rgyud</title> 
+                                                        (<ref target="http://www.rkts.org/cat.php?id=153&amp;typ=3">rKTs-G153</ref> f. 228.b); see also the translation 
+                                                        of the <title xml:lang="Sa-Ltn">Guhyagarbhatantra</title> and commentary in Choying Tobden Dorje
+                                                (2016), vol. 1, p. 198 <foreign xml:lang="la">et passim</foreign>.</note>
+                    </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-043-218"/>
                                         <p tid="16">As shown by Lye (2003), the story recounted here
                                                 has had a major legacy in Chinese Buddhism, since it
-                                                is treated as the origin myth for the <foreign xml:lang="Zh-Ltn">Yuqie yankou</foreign> (<foreign xml:lang="zh">瑜伽燄口</foreign>) rite at the heart of
+                                                is treated as the origin myth for the <foreign xml:lang="Zh-Ltn">Yuqie yankou</foreign> 
+                                                (<foreign xml:lang="zh">瑜伽燄口</foreign>) rite at the heart of
                                                 the Ghost Festival celebrated annually in the
                                                 seventh month of the Chinese calendar. In Tibetan
                                                 Buddhism, its legacies are found in a variety of
                                                 rites that involve making torma (Skt. <foreign xml:lang="Sa-Ltn" type="term">bali</foreign>, Tib.
                                                   <foreign xml:lang="Bo-Ltn" type="term">gtor
                                                   ma</foreign>) offerings to the pretas, in which
-                                                the dhāraṇī given in the sūtra is employed. The
+                                                the dhāraṇī given in the sūtra is employed. Many such rites involve the
+                                                invocation or visualization of Avalokiteśvara, just as
+                                                some of the related practices in Chinese tradition may 
+                                                incorporate the bodhisattva Guanyin.<note place="end" xml:id="UT22084-091-043-227">
+                                                        Rotman (2021), pp. 60–61. The association with Avalokiteśvara (or Guanyin) may be relevant to
+                                                        the apparent reference to Avalokiteśvara in the dhāraṇī formula (see
+                                                        <ptr target="#UT22084-091-043-131"/>).</note> The
                                                 offering rite explicitly based on this text,
                                                 including the evocation of the four tathāgatas,
                                                 clearly had considerable popularity in Tibet since
@@ -558,6 +582,7 @@
                                                 compassionate deployment in different situations are
                                                 briefly described. The text concludes with an
                                                 admonition to memorize and teach the practice.</p>
+                                        <lb/>
                                         <milestone unit="chunk" xml:id="UT22084-091-043-28"/>
                                         <p tid="24">
                         <title xml:lang="en">The Dhāraṇī of Refuge for
@@ -939,6 +964,10 @@
                                 </div>
                                 <div type="section" xml:id="UT22084-091-043-listBibl-3">
                                         <head type="section" tid="61">Western Languages</head>
+                                        <bibl xml:id="UT22084-091-043-273">Choying Tobden Dorje, trans. Gyurme Dorje. 
+                                                <title xml:lang="en">The Complete Nyingma Tradition from Sutra to Tantra, 
+                                                        Books 15 to 17: The Essential Tantras of Mahāyoga</title> (2 vols). 
+                                                Boulder: Snow Lion, 2016. </bibl>
                                         <bibl xml:id="UT22084-091-043-73">Feer, Léon. “Dharani pour
                                                 échapper au preta de la bouche duquel sort un feu
                                                 brûlant.” In <title xml:lang="fr">Fragments extraits
@@ -968,25 +997,21 @@
                                                   Practice</title>, edited by Donald S. Lopez. Jr.,
                                                 278–83. Princeton: Princeton University Press,
                                                 1996.</bibl>
-                                        <bibl xml:id="UT22084-091-043-79">Pagel, Ulrich. “The
-                                                Dhāraṇīs of Mahāvyutpatti #748: Origin and
-                                                Formation.” <title xml:lang="en">Buddhist Studies
-                                                  Review</title> 24, no. 2 (2007): 151–91.</bibl>
                                         <bibl xml:id="UT22084-091-043-80">Roberts, Peter Alan,
                                                 trans. <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh113.html">The White Lotus of the Good Dharma</ref>
+                            <ref target="https://read.84000.co/translation/toh113.html">The 
+                                                        White Lotus of the Good Dharma</ref>
                         </title>
                                                   (<title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title>, Toh 113). 84000:
                                                 Translating the Words of the Buddha, 2018.</bibl>
                                         <bibl xml:id="UT22084-091-043-180">Rotman, Andy. <title xml:lang="en">Hungry Ghosts</title>.
                                                  Somerville: Wisdom Publications, 2021.</bibl>
                                         <bibl xml:id="UT22084-091-043-81">Sakya Pandita Kunga
-                                                Gyaltshen. <title xml:lang="en">A Clear
+                                                Gyaltshen, tr. Jared Douglas Rhoton. <title xml:lang="en">A Clear
                                                   Differentiation of the Three Codes: Essential
                                                   Distinctions among the Individual Liberation,
                                                   Great Vehicle, and Tantric Systems: the sDom gsum
-                                                  rab dbye and six letters</title>. Translated by
-                                                Jared Douglas Rhoton. Albany: State University of
+                                                  rab dbye and six letters</title>. Albany: State University of
                                                 New York Press, 2002.</bibl>
                                 </div>
                         </div>
@@ -1238,9 +1263,46 @@
                                                   the younger half-brother of Prince Siddhārtha (the
                                                   Buddha Śākyamuni); his mother was Mahāprajāpatī
                                                   Gautamī, Siddhārtha Gautama’s maternal aunt. He
-                                                  became an important monastic disciple of the
+                                                  became an important śrāvaka disciple of the
                                                   Buddha.</p>
                                                   </note>
+                                        </gloss>
+                    </item>
+                                        <item>
+                        <gloss type="person" xml:id="UT22084-091-043-1106">
+                                                <term type="translationMain">Nandaka</term>
+                                                <term xml:lang="Sa-Ltn" type="sourceUnspecified">Nandaka</term>
+                                                <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ byed</term>
+                                                <term xml:lang="bo" type="attestedSource" n="1">དགའ་བྱེད།</term>
+                                                <note type="definition">
+                                                        <p>Nephew of the lay patron Anāthapiṇḍada of Śrāvastī. Nandaka became an important śrāvaka disciple of the
+                                                                Buddha, “foremost in teaching.”</p>
+                                                </note>
+                                        </gloss>
+                    </item>
+                                        <item>
+                        <gloss type="person" xml:id="UT22084-091-043-1107">
+                                                <term type="translationMain">Ānanda</term>
+                                                <term xml:lang="Sa-Ltn" type="sourceUnspecified">Ānanda</term>
+                                                <term xml:lang="Bo-Ltn" type="attestedSource" n="1">kun dga’ bo</term>
+                                                <term xml:lang="bo" type="attestedSource" n="1">ཀུན་དགའ་བོ།</term>
+                                                <note type="definition">
+                                                        <p>The Buddha’s cousin, chief attendant, an important śrāvaka disciple who 
+                                                                was made responsible for memorizing and reciting many of the
+                                                                Buddha’s discourses.</p>
+                                                </note>
+                                        </gloss>
+                    </item>
+                                        <item>
+                        <gloss type="person" xml:id="UT22084-091-043-1108">
+                                                        <term type="translationMain">Maudgalyāyana</term>
+                                                        <term xml:lang="Sa-Ltn" type="sourceUnspecified">Maudgalyāyana</term>
+                                                        <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mo’u ’gal gyi bu</term>
+                                                        <term xml:lang="bo" type="attestedSource" n="1">མོའུ་འགལ་གྱི་བུ།</term>
+                                                        <note type="definition">
+                                                                <p>One of the two chief śrāvaka disciples of the Buddha. He 
+                                                                        was “foremost in supernormal powers” and had frequent encounters with pretas.</p>
+                                                        </note>
                                                 </gloss>
                     </item>
                                         <item>
