--- a/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
+++ b/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
@@ -7,14 +7,16 @@
                                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Refuge for the
                                         Preta Flaming Mouth</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">yi dags kha nas me ’bar
-                                        skyabs pa’i gzungs</title>
+                                        skyabs pa’i gzungs</title> 
+                                <title type="mainTitle" xml:lang="bo">དགས་ཁ་ནས་མེ་འབར་སྐྱབས་པའི་གཟུངས།</title>
                                 <title type="longTitle" xml:lang="en">The Dhāraṇī “Giving Refuge to
                                         the Preta Flaming Mouth”</title>
                                 <title type="longTitle" xml:lang="bo">ཡི་དགས་ཁ་ནས་མེ་འབར་བ་ལ་སྐྱབས་མཛད་པ་ཞེས་བྱ་བའི་གཟུངས།</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">yi dags kha nas me ’bar ba
                                         la skyabs mdzad pa zhes bya ba’i gzungs</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha nas me 'bar
-                                        ba la skyabs mdzad pa'i gzungs/</title>
+                                        ba la skyabs mdzad pa'i gzungs</title>
+                                <title type="otherTitle" xml:lang="bo">ཡི་དགས་ཁ་ནས་མེ་འབར་བ་ལ་སྐྱབས་མཛད་པའི་གཟུངས།</title>
                                 <author role="translatorMain" xml:id="UT22084-091-043-133">Translated by Paul G. Hackett<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha</author>
@@ -34,7 +36,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.2 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -43,7 +45,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="2">
+                                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -59,7 +61,7 @@
                                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2023-06-20</date>
+                                <date>2023-11-10</date>
                         </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh646" type="text">
@@ -168,6 +170,12 @@
                 </change>
                 <change who="#john" when="2023-11-10T15:47:57.551Z" type="text-version" status="0.1.2" xml:id="UT22084-091-043-1219">
                     <desc>Further edits prior to publication.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-10T19:21:11.766Z" type="translation-status" status="1.a" xml:id="UT22084-091-043-1220">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-10T19:21:11.766Z" type="text-version" status="1.0.0" xml:id="UT22084-091-043-1221">
+                    <desc>First published version</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -1151,7 +1159,10 @@
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhikṣuṇī</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dge slong ma</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">དགེ་སློང་མ།</term>
-                                                </gloss>
+                                                <note type="definition">
+                                                        <p>A fully ordained female practitioner observing 364 Vinaya vows.</p>
+                                                </note>
+                                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-043-94">
@@ -1228,6 +1239,9 @@
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">triratna</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dkon mchog gsum</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">དཀོན་མཆོག་གསུམ།</term>
+                                                <note type="definition">
+                                                        <p>The Buddha, Dharma, and Saṅgha‍—the three objects of Buddhist refuge. In the Tibetan rendering, “the three rare and supreme ones.”</p>
+                                                </note>
                                                 </gloss>
                     </item>
                                         <item>
@@ -1394,7 +1408,10 @@
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">kapilavastu</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">yul ser skya</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">ཡུལ་སེར་སྐྱ།</term>
-                                                </gloss>
+                                                <note type="definition">
+                                                        <p>The Śākya capital, where Siddhārtha Gautama was raised.</p>
+                                                </note>
+                                        </gloss>
                     </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-091-043-116">
